corrected version-removed align-items and added text-align in body instead, replace width with max-width

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,18 +1,17 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 
 .container{
   display:flex;
-  flex-wrap: wrap;
   gap: 52px;
-  align-items: stretch;
   justify-content: center;
 }
 
 .item{
-  width: 200px;
+  max-width: 200px;
 }
 
 img {
@@ -24,7 +23,6 @@ img {
   font-size: 36px;
   font-weight: 900;
   margin-bottom: 32px;
-  text-align: center;
 }
 
 /* do not edit this footer */
